<resources>
    <string name="app_name">Nixie</string>

    <string name="connect_to_nixie_text">Connect to your Nixie Clock</string>
    <string name="bt_status_monitor">Ready to connect to remote device&#8230;</string>
    <string name="btn_list_paired_devices_text">List Paired Devices</string>
    <string name="btn_goto_bt_settings_text">Pair New Devices</string>
    <string name="btn_disconnect_text">Disconnect from remote device</string>
    <string name="connected_to_text">Connected to</string>
    <string name="remote_device_name">%1$s</string>
    <string name="remote_device_address">%1$s</string>
    <string name="disconnected_text">Disconnected from remote device</string>

    <string name="time_mode_button_desc">Pressing this button will lead to the Time Mode Activity</string>
    <string name="date_mode_button_desc">Pressing this button will lead to the Date Mode Activity</string>
    <string name="countdown_mode_button_desc">Pressing this button will lead to the Countdown Mode Activity</string>
    <string name="led_control_button_desc">Pressing this button will lead to the LED Control Activity</string>
    <string name="status_monitor_button_desc">Pressing this button will lead to the Status Monitor Activity</string>

    <string name="time_mode_button_display_text">Time</string>
    <string name="date_mode_button_display_text">Date</string>
    <string name="countdown_mode_button_display_text">Countdown</string>
    <string name="led_control_button_display_text">LED</string>
    <string name="status_monitor_button_display_text">Status Monitor</string>

    <string name="manual_time_button_desc">Pressing this button will lead to a timepicker fragment to select time</string>
    <string name="system_time_button_desc">Pressing this button will fetch the current android system time</string>
    <string name="display_on_nixie_button_desc">Pressing this button will update the nixie hardware with time/date chosen</string>

    <string name="time_mode_text">Time Mode</string>
    <string name="date_mode_text">Date Mode</string>
    <string name="countdown_mode_text">Countdown Mode</string>
    <string name="led_control_text">LED Control</string>
    <string name="status_monitor_text">Status Monitor</string>

    <string name="set_time_text">Set Time</string>
    <string name="set_date_text">Set Date</string>

    <string name="manual_text">Manual</string>
    <string name="system_text">System</string>
    <string name="sync_button_display_text">Display on Nixie</string>

    <string name="time_display_initial_text">00:00:00</string>
    <string name="date_display_initial_text">00/00/0000</string>

    <string name="countdown_mode_title_text">Set Countdown Time</string>
    <string name="hour_initial_text">Hours</string>
    <string name="mins_initial_text">Mins</string>
    <string name="secs_initial_text">Secs</string>

</resources>
