<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountdownMode"
    android:background="#263238">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/TV_Time_Mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/share_tech_mono"
            android:text="@string/countdown_mode_text"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/TV_Set_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/share_tech_mono"
            android:text="@string/countdown_mode_title_text"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/ET_Hour"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/hour_initial_text"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/ET_Min"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/mins_initial_text"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/ET_Sec"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/secs_initial_text"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />


        <Button
            android:id="@+id/Button_Sync_With_Nixie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_button_display_text"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#000000"
            android:textSize="20sp"
            android:fontFamily="@font/share_tech_mono"
            android:textStyle="bold"
            android:contentDescription="@string/display_on_nixie_button_desc" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>