<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="#263238" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="clip_vertical|center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-29dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="-40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="50dp">

                <ImageButton
                    android:id="@+id/Button_Time_Mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_dotted_square"
                    android:contentDescription="@string/time_mode_button_desc"
                    android:src="@drawable/time_mode_logo" />

                <TextView
                    android:id="@+id/TV_Time_Mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/share_tech_mono"
                    android:text="@string/time_mode_button_display_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/Button_Date_Mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_dotted_square"
                    android:contentDescription="@string/date_mode_button_desc"
                    android:src="@drawable/date_mode_logo" />

                <TextView
                    android:id="@+id/TV_Date_Mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/share_tech_mono"
                    android:text="@string/date_mode_button_display_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="50dp">

                <ImageButton
                    android:id="@+id/Button_Countdown_Mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_dotted_square"
                    android:contentDescription="@string/countdown_mode_button_desc"
                    android:src="@drawable/countdown_mode_logo" />

                <TextView
                    android:id="@+id/TV_Countdown_Mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/share_tech_mono"
                    android:gravity="center_horizontal"
                    android:text="@string/countdown_mode_button_display_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/Button_LED_Control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_dotted_square"
                    android:contentDescription="@string/led_control_button_desc"
                    android:src="@drawable/led_logo" />

                <TextView
                    android:id="@+id/TV_LED_Control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/share_tech_mono"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/led_control_button_display_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/Button_Status_Monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_dotted_square"
                    android:contentDescription="@string/status_monitor_button_desc"
                    android:src="@drawable/settings_logo" />

                <TextView
                    android:id="@+id/TV_Status_Monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/share_tech_mono"
                    android:text="@string/status_monitor_button_display_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>